# certify

./: CMakeLists.txt
include/boost/certify/: extensions.hpp  https_verification.hpp
include/boost/certify/impl/: extensions.hpp  https_verification.hpp
